# unitree_sdk2

./: .clangd  .gitignore  CMakeLists.txt  build.sh
.zed/: settings.json
deploy/: CMakeLists.txt  g1_motion_controller.cpp  joint_meta.json  policy.pt
source/arm/: CMakeLists.txt  main.cpp
source/g1_node/: CMakeLists.txt  main.cpp
source/move/: CMakeLists.txt  main.cpp
source/talk/: CMakeLists.txt  main.cpp
src/: main.cpp
